# equity-researcher-analyst-a2a

./: .gitignore  CLAUDE.md  DESCRIZIONE.md  architectural-review.md  enterprise-evolution-plan.md  pyproject.toml  start.sh  test.sh
agents/data-collector/: agent.py  data_collector.py
agents/data-collector/.well-known/: agent.json
agents/data-collector/demo/: response.json
agents/fundamental-analyst/: agent.py  fundamental_analyst.py
agents/fundamental-analyst/demo/: response.json
agents/news-sentiment/: agent.py  news_sentiment.py
agents/news-sentiment/demo/: response.json
agents/portfolio-manager/: portfolio_manager.py
agents/portfolio-manager/.well-known/: agent.json
agents/portfolio-manager/demo/: response.json  response_portfolio.json
agents/report-writer/: agent.py  report_writer.py
agents/report-writer/demo/: response.json
agents/risk-assessor/: agent.py  risk_assessor.py
agents/risk-assessor/demo/: response.json
analysis/: harness_analyzer.py
data/rag/documents/: README.md  aapl_10k_fy2025_excerpt.md  asml_annual_report_2025_excerpt.md  coverage_universe_watchlist.md  esg_exclusion_policy.md  investment_policy_statement.md  macro_context_q2_2026.md  msft_10k_fy2025_excerpt.md  nvda_10k_fy2026_excerpt.md  nvda_analyst_initiation_2026.md  regulatory_note_eu_ai_act.md  risk_scoring_methodology.md  sector_note_ai_software.md  sector_note_european_banking.md  sector_note_semiconductors.md  sector_rotation_framework.md  ucg_earnings_q4_2025_transcript.md  valuation_framework_tech.md
docs/: ai_business_model_canvas.md  architecture.md
orchestrator/: api.py  gates.py  main.py
orchestrator/.well-known/: agent.json
scripts/: _check_checkpoints_db.py  _check_memory_db.py  _check_portfolio_db.py  check_msft_db.py  remediate_portfolio_db.py  smoke_test_rag.py  verify_memory.py
shared/: agent_memory.py  audit.py  demo.py  exceptions.py  hmac_auth.py  llm_client.py  llm_judge.py  models.py  pipeline_models.py  portfolio_db.py  rag_retriever.py  react.py  report.py  sanitize.py  secrets.py  validators.py
shared/templates/: report.html.j2
shared/tools/: rss_feed.py  yfinance_tool.py
static/: index.html
tests/: conftest.py  test_adversarial.py  test_caching.py  test_gates.py  test_integration.py  test_pipeline_models.py  test_prompt_injection.py  test_validators.py
